force-app/main/default/objects/Agent_Action_Config__mdt/Agent_Action_Config__mdt.object-meta.xml
<CustomObject>
    <description>Controls action exposure and prompt mapping for the AI metadata copilot.</description>
    <label>Agent Action Config</label>
    <pluralLabel>Agent Action Configs</pluralLabel>
</CustomObject>