force-app/main/default/objects/Agent_Action_Config__mdt/fields/Enabled__c.field-meta.xml
<CustomField>
    <defaultValue>false</defaultValue>
    <fullName>Enabled__c</fullName>
    <label>Enabled</label>
    <type>Checkbox</type>
</CustomField>