force-app/main/default/objects/Agent_Action_Config__mdt/fields/Guardrail_Note__c.field-meta.xml
<CustomField>
    <fullName>Guardrail_Note__c</fullName>
    <label>Guardrail Note</label>
    <length>255</length>
    <type>Text</type>
</CustomField>