force-app/main/default/objects/Agent_Action_Config__mdt/fields/Prompt_Template_Name__c.field-meta.xml
<CustomField>
    <fullName>Prompt_Template_Name__c</fullName>
    <label>Prompt Template Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>